--- a/UI/floorplan-prototype.html
+++ b/UI/floorplan-prototype.html
@@ -207,6 +207,12 @@
         background: rgba(18, 18, 18, 0.42);
       }
 
+      .qa[aria-expanded='true'] {
+        transform: translateY(-1px);
+        border-color: rgba(255, 201, 125, 0.28);
+        background: rgba(18, 18, 18, 0.42);
+      }
+
       .qa .label {
         margin-top: 6px;
         font-size: 13px;
@@ -815,15 +821,13 @@
         font-weight: 700;
       }
 
-      /* Floating media player (draggable) */
+      /* Sidebar media panel (mutually exclusive with Agenda) */
       .media-window {
-        position: absolute;
-        top: 92px;
-        left: 54px;
-        width: 360px;
-        min-height: 220px;
-        z-index: 10;
-        background: rgba(18, 18, 18, 0.96);
+        position: relative;
+        width: auto;
+        flex: 1;
+        min-height: 0;
+        overflow: auto;
       }
 
       .is-hidden {
@@ -840,12 +844,8 @@
         border-radius: 18px;
         border: 1px solid rgba(255, 255, 255, 0.08);
         background: rgba(18, 18, 18, 0.22);
-        cursor: grab;
+        cursor: default;
         user-select: none;
-      }
-
-      .media-window__header:active {
-        cursor: grabbing;
       }
 
       .media-window__title {
@@ -938,46 +938,28 @@
               <div>
                 <div class="temp">4.8°C</div>
                 <div class="desc">Breezy and foggy for the hour</div>
-                <div class="meta">humidity: 47%</div>
+                <div class="meta">Humidity: 47%</div>
               </div>
             </div>
 
             <div class="quick-actions" aria-label="Quick actions">
-              <a class="qa" href="#top" aria-label="All Off (prototype)">
+              <a class="qa" href="#top" aria-label="Lighting (prototype)">
                 <svg viewBox="0 0 24 24" aria-hidden="true">
                   <path
                     fill="currentColor"
-                    d="M13 3h-2v10h2V3zm4.83 2.17-1.42 1.42A7.97 7.97 0 0 1 20 12a8 8 0 1 1-14.41-4.41L4.17 6.17A9.95 9.95 0 0 0 2 12a10 10 0 1 0 18-6a9.95 9.95 0 0 0-2.17-.83z"
+                    d="M9 21c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-1H9v1zm3-20C8.13 1 5 4.13 5 8c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-3.26C17.81 12.47 19 10.38 19 8c0-3.87-3.13-7-7-7z"
                   />
                 </svg>
-                <div class="label">All Off</div>
+                <div class="label">Lighting</div>
               </a>
-              <a class="qa" href="#top" aria-label="Bright (prototype)">
+              <a class="qa" href="#top" aria-label="Climate (prototype)">
                 <svg viewBox="0 0 24 24" aria-hidden="true">
                   <path
                     fill="currentColor"
-                    d="M12 18a6 6 0 1 1 0-12a6 6 0 0 1 0 12zm0-14V1h0v3zm0 22v-3h0v3zM4.22 5.64 2.1 3.51l1.41-1.41 2.12 2.12L4.22 5.64zM21.9 20.49l-1.41 1.41-2.12-2.12 1.41-1.41 2.12 2.12zM1 12h3v0H1zm22 0h-3v0h3zM4.22 18.36l1.41 1.41-2.12 2.12-1.41-1.41 2.12-2.12zM19.78 5.64 18.36 4.22l2.12-2.12 1.41 1.41-2.12 2.13z"
+                    d="M6.76 4.84l-1.8-1.79-1.41 1.41 1.79 1.8 1.42-1.42zM1 13h3v-2H1v2zm10 10h2v-3h-2v3zm9.04-18.95-1.41-1.41-1.8 1.79 1.42 1.42 1.79-1.8zM20 11v2h3v-2h-3zM6.76 19.16l-1.42-1.42-1.79 1.8 1.41 1.41 1.8-1.79zM17.24 19.16l1.8 1.79 1.41-1.41-1.79-1.8-1.42 1.42zM12 6a6 6 0 1 0 0 12a6 6 0 0 0 0-12zm0-5h0v3h0V1z"
                   />
                 </svg>
-                <div class="label">Bright</div>
-              </a>
-              <a class="qa" href="#top" aria-label="Warm (prototype)">
-                <svg viewBox="0 0 24 24" aria-hidden="true">
-                  <path
-                    fill="currentColor"
-                    d="M12 2a7 7 0 0 0-4 12.74V22h8v-7.26A7 7 0 0 0 12 2zm3 18H9v-4.5h6V20zm0-6.5H9v-0.86A5 5 0 1 1 15 12.64v0.86z"
-                  />
-                </svg>
-                <div class="label">Warm</div>
-              </a>
-              <a class="qa" href="#top" aria-label="Cabin (prototype)">
-                <svg viewBox="0 0 24 24" aria-hidden="true">
-                  <path
-                    fill="currentColor"
-                    d="M19.36 10.46 12 4.58 4.64 10.46 3.4 8.9 12 2l8.6 6.9-1.24 1.56zM5 11h14v11h-6v-7H11v7H5V11z"
-                  />
-                </svg>
-                <div class="label">Cabin</div>
+                <div class="label">Climate</div>
               </a>
               <button
                 class="qa"
@@ -988,22 +970,63 @@
                 aria-expanded="false"
               >
                 <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <!-- Video/film frame -->
                   <path
                     fill="currentColor"
-                    d="M18 4v2h2v14H4V6h2V4H2v18h20V4h-4zM8 4v2h2V4H8zm4 0v2h2V4h-2zm4 0v2h2V4h-2z"
+                    d="M4 5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2H4zm0 2h10v10H4V7z"
+                  />
+                  <!-- Film perforations -->
+                  <path
+                    fill="currentColor"
+                    d="M5 8h1v1H5V8zm0 2h1v1H5v-1zm0 2h1v1H5v-1zm0 2h1v1H5v-1z"
+                  />
+                  <!-- Play triangle in the frame -->
+                  <path fill="currentColor" d="M9 10.2v3.6L12 12l-3-1.8z" />
+                  <!-- Music note overlay -->
+                  <path
+                    fill="currentColor"
+                    d="M20 6v8.6a2.2 2.2 0 1 1-1.6-2.1V8.6l-4 1V7.9l5.6-1.4z"
                   />
                 </svg>
                 <div class="label">Media</div>
               </button>
-              <a class="qa" href="#top" aria-label="More (prototype)">
+              <a class="qa" href="#top" aria-label="Security (prototype)">
                 <svg viewBox="0 0 24 24" aria-hidden="true">
-                  <path fill="currentColor" d="M7 10l5 5 5-5H7z" />
+                  <path
+                    fill="currentColor"
+                    d="M12 1l9 4v6c0 5.55-3.84 10.74-9 12-5.16-1.26-9-6.45-9-12V5l9-4zm0 4.18L5 7.5V11c0 4.52 2.98 8.84 7 10 4.02-1.16 7-5.48 7-10V7.5l-7-2.32z"
+                  />
                 </svg>
-                <div class="label">More</div>
+                <div class="label">Security</div>
               </a>
+              <a class="qa" href="#top" aria-label="Cameras (prototype)">
+                <svg viewBox="0 0 401.931 401.931" aria-hidden="true">
+                  <path
+                    fill="currentColor"
+                    d="M395.928,187.794l-272.1-135.687c-5.358-2.669-11.866-0.494-14.538,4.864L51.24,173.379c-1.283,2.573-1.491,5.55-0.579,8.276c0.912,2.727,2.869,4.979,5.443,6.262l81.242,40.511l-7.208,14.455c-2.671,5.358-0.494,11.866,4.864,14.538l2.561,1.278l-13.998,24.929H41.027C33.351,268.782,17.867,258.626,0,258.626v92.338c17.454,0,32.642-9.688,40.49-23.978h95.766c7.838,0,15.065-4.229,18.903-11.063l21.255-37.85l3.695,1.842c5.357,2.671,11.867,0.493,14.539-4.863l7.208-14.455l60.7,30.271c3.501,1.746,7.671,1.471,10.911-0.723l16.753-11.332l29.912,14.916c1.518,0.758,3.174,1.14,4.837,1.14c1.159,0,2.32-0.188,3.439-0.562c2.727-0.91,4.979-2.869,6.262-5.441l30.624-61.413l31.757-20.903c3.239-2.132,5.092-5.832,4.86-9.702C401.679,192.976,399.397,189.525,395.928,187.794z"
+                  />
+                </svg>
+                <div class="label">Cameras</div>
+              </a>
+              <button
+                class="qa"
+                type="button"
+                id="agenda-toggle"
+                aria-label="Agenda"
+                aria-controls="agenda"
+                aria-expanded="true"
+              >
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path
+                    fill="currentColor"
+                    d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zm0-12H5V6h14v2z"
+                  />
+                </svg>
+                <div class="label">Agenda</div>
+              </button>
             </div>
 
-            <div class="agenda" aria-label="Agenda">
+            <div class="agenda" id="agenda" aria-label="Agenda">
               <div class="item">
                 <div class="name">Weekend In</div>
                 <div class="time">Until 7:00 PM</div>
@@ -1025,6 +1048,55 @@
                 <div class="time">All Day</div>
               </div>
             </div>
+
+            <section
+              id="media-window"
+              class="tile media-window is-hidden"
+              aria-label="Media player"
+            >
+              <div class="media-window__header" aria-label="Media window header">
+                <div class="media-window__title">
+                  <span class="media-window__pill">
+                    <svg viewBox="0 0 24 24" aria-hidden="true">
+                      <path
+                        fill="rgba(234,231,223,0.85)"
+                        d="M12 3c5 0 9 4 9 9s-4 9-9 9-9-4-9-9 4-9 9-9zm-1 5v8l7-4-7-4z"
+                      />
+                    </svg>
+                    Media
+                  </span>
+                </div>
+              </div>
+
+              <div class="media" aria-label="Now playing">
+                <div class="track" id="media-track">All Along the Wa...</div>
+                <div class="artist" id="media-artist">Jimmi Hendrix</div>
+              </div>
+
+              <div class="controls" aria-label="Media controls">
+                <div class="buttons" role="group" aria-label="Playback">
+                  <div class="btn" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" aria-hidden="true">
+                      <path
+                        fill="rgba(234,231,223,0.85)"
+                        d="M11 18V6l-8.5 6L11 18zm1-12v12h2V6h-2z"
+                      />
+                    </svg>
+                  </div>
+                  <div class="btn" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" aria-hidden="true">
+                      <path fill="rgba(234,231,223,0.85)" d="M8 5v14l11-7z" />
+                    </svg>
+                  </div>
+                  <div class="btn" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" aria-hidden="true">
+                      <path fill="rgba(234,231,223,0.85)" d="M13 6v12l8.5-6L13 6zM4 18h2V6H4v12z" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="scrub" aria-hidden="true"><span></span></div>
+              </div>
+            </section>
 
             <pre class="status-block" id="floorplan-status"></pre>
           </aside>
@@ -1232,60 +1304,6 @@
                 </div>
               </div>
             </div>
-
-            <section
-              id="media-window"
-              class="tile media-window is-hidden"
-              aria-label="Media player window"
-            >
-              <div
-                class="media-window__header"
-                id="media-window-handle"
-                aria-label="Drag media window"
-              >
-                <div class="media-window__title">
-                  <span class="media-window__pill">
-                    <svg viewBox="0 0 24 24" aria-hidden="true">
-                      <path
-                        fill="rgba(234,231,223,0.85)"
-                        d="M12 3c5 0 9 4 9 9s-4 9-9 9-9-4-9-9 4-9 9-9zm-1 5v8l7-4-7-4z"
-                      />
-                    </svg>
-                    Media
-                  </span>
-                  <span class="media-window__hint">Drag</span>
-                </div>
-              </div>
-
-              <div class="media" aria-label="Now playing">
-                <div class="track" id="media-track">Dawn</div>
-                <div class="artist" id="media-artist">Kelly Moran</div>
-              </div>
-
-              <div class="controls" aria-label="Media controls">
-                <div class="buttons" role="group" aria-label="Playback">
-                  <div class="btn" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" aria-hidden="true">
-                      <path
-                        fill="rgba(234,231,223,0.85)"
-                        d="M11 18V6l-8.5 6L11 18zm1-12v12h2V6h-2z"
-                      />
-                    </svg>
-                  </div>
-                  <div class="btn" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" aria-hidden="true">
-                      <path fill="rgba(234,231,223,0.85)" d="M8 5v14l11-7z" />
-                    </svg>
-                  </div>
-                  <div class="btn" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" aria-hidden="true">
-                      <path fill="rgba(234,231,223,0.85)" d="M13 6v12l8.5-6L13 6zM4 18h2V6H4v12z" />
-                    </svg>
-                  </div>
-                </div>
-                <div class="scrub" aria-hidden="true"><span></span></div>
-              </div>
-            </section>
           </main>
         </div>
       </div>
@@ -2256,70 +2274,18 @@
           return { x, y, z };
         }
 
-        function enableDragging() {
-          const stage = document.querySelector('.stage');
-          const win = document.getElementById('media-window');
-          const handle = document.getElementById('media-window-handle');
-          if (
-            !(stage instanceof HTMLElement) ||
-            !(win instanceof HTMLElement) ||
-            !(handle instanceof HTMLElement)
-          ) {
-            return;
-          }
-
-          let startX = 0;
-          let startY = 0;
-          let startLeft = 0;
-          let startTop = 0;
-          let dragging = false;
-
-          function clamp(v, min, max) {
-            return Math.min(Math.max(v, min), max);
-          }
-
-          handle.addEventListener('pointerdown', (e) => {
-            dragging = true;
-            handle.setPointerCapture(e.pointerId);
-            const rect = win.getBoundingClientRect();
-            const stageRect = stage.getBoundingClientRect();
-            startX = e.clientX;
-            startY = e.clientY;
-            startLeft = rect.left - stageRect.left;
-            startTop = rect.top - stageRect.top;
-          });
-
-          handle.addEventListener('pointermove', (e) => {
-            if (!dragging) return;
-            const dx = e.clientX - startX;
-            const dy = e.clientY - startY;
-            const stageRect = stage.getBoundingClientRect();
-            const w = win.offsetWidth;
-            const h = win.offsetHeight;
-            const margin = 10;
-            const maxLeft = stageRect.width - w - margin;
-            const maxTop = stageRect.height - h - margin;
-            const nextLeft = clamp(startLeft + dx, margin, Math.max(margin, maxLeft));
-            const nextTop = clamp(startTop + dy, margin, Math.max(margin, maxTop));
-            win.style.left = `${nextLeft}px`;
-            win.style.top = `${nextTop}px`;
-          });
-
-          handle.addEventListener('pointerup', (e) => {
-            dragging = false;
-            try {
-              handle.releasePointerCapture(e.pointerId);
-            } catch {
-              // ignore
-            }
-          });
-        }
-
         function enableMediaToggle() {
           const toggleButton = document.getElementById('media-toggle');
           const win = document.getElementById('media-window');
 
-          if (!(toggleButton instanceof HTMLButtonElement) || !(win instanceof HTMLElement)) {
+          const agendaEl = document.getElementById('agenda');
+          const agendaToggle = document.getElementById('agenda-toggle');
+
+          if (
+            !(toggleButton instanceof HTMLButtonElement) ||
+            !(win instanceof HTMLElement) ||
+            !(agendaEl instanceof HTMLElement)
+          ) {
             return;
           }
 
@@ -2330,14 +2296,53 @@
           syncAria();
 
           toggleButton.addEventListener('click', () => {
-            win.classList.toggle('is-hidden');
+            const showMedia = isHidden();
+            win.classList.toggle('is-hidden', !showMedia);
+            agendaEl.classList.toggle('is-hidden', showMedia);
+
+            if (agendaToggle instanceof HTMLButtonElement) {
+              agendaToggle.setAttribute('aria-expanded', showMedia ? 'false' : 'true');
+            }
+            syncAria();
+          });
+        }
+
+        function enableAgendaToggle() {
+          const toggleButton = document.getElementById('agenda-toggle');
+          const agendaEl = document.getElementById('agenda');
+
+          const mediaToggle = document.getElementById('media-toggle');
+          const mediaEl = document.getElementById('media-window');
+
+          if (
+            !(toggleButton instanceof HTMLButtonElement) ||
+            !(agendaEl instanceof HTMLElement) ||
+            !(mediaEl instanceof HTMLElement)
+          ) {
+            return;
+          }
+
+          const isVisible = () => !agendaEl.classList.contains('is-hidden');
+          const syncAria = () =>
+            toggleButton.setAttribute('aria-expanded', isVisible() ? 'true' : 'false');
+
+          syncAria();
+
+          toggleButton.addEventListener('click', () => {
+            agendaEl.classList.toggle('is-hidden');
+            if (isVisible()) {
+              mediaEl.classList.add('is-hidden');
+              if (mediaToggle instanceof HTMLButtonElement) {
+                mediaToggle.setAttribute('aria-expanded', 'false');
+              }
+            }
             syncAria();
           });
         }
 
         (async function init() {
-          enableDragging();
           enableMediaToggle();
+          enableAgendaToggle();
           const statusEl = document.getElementById('floorplan-status');
           const emptyEl = document.getElementById('floorplan-empty');
           const emptyMessageEl = document.getElementById('floorplan-empty-message');
