--- a/UI/floorplan-prototype.html
+++ b/UI/floorplan-prototype.html
@@ -234,6 +234,141 @@
         overflow: auto;
       }
 
+      .climate-panel {
+        flex: 1;
+        overflow: auto;
+      }
+
+      .climate-panel__header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 12px;
+        padding: 10px 12px 6px;
+        margin: -6px -6px 12px;
+        border-radius: 18px;
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        background: rgba(18, 18, 18, 0.22);
+        user-select: none;
+      }
+
+      .climate-panel.title {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 14px;
+        color: rgba(185, 182, 175, 0.92);
+        letter-spacing: 0.2px;
+        min-height: min-content;
+      }
+
+      .climate-panel__pill {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+        padding: 6px 10px;
+        border-radius: 999px;
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        background: rgba(9, 9, 9, 0.38);
+      }
+
+      .climate-panel__pill svg {
+        width: 16px;
+        height: 16px;
+        opacity: 0.9;
+      }
+
+      .thermostat {
+        display: grid;
+        gap: 10px;
+      }
+
+      .thermostat__temp {
+        font-size: 54px;
+        font-weight: 800;
+        letter-spacing: 0.3px;
+        color: rgba(234, 231, 223, 0.92);
+        line-height: 1;
+      }
+
+      .thermostat__meta {
+        display: grid;
+        gap: 4px;
+        color: rgba(185, 182, 175, 0.92);
+        font-size: 14px;
+      }
+
+      .thermostat__meta strong {
+        color: var(--text-primary);
+        font-weight: 700;
+      }
+
+      .temp-range {
+        margin-top: 14px;
+        display: grid;
+        gap: 10px;
+      }
+
+      .temp-range__row {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+        gap: 12px;
+        color: var(--text-muted);
+        font-size: 12px;
+        letter-spacing: 0.2px;
+      }
+
+      .temp-range__bar {
+        position: relative;
+        height: 10px;
+        border-radius: 999px;
+        background: linear-gradient(90deg, var(--node-blue), var(--accent));
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        overflow: visible;
+      }
+
+      .temp-range__indicator {
+        position: absolute;
+        left: 30%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 16px;
+        height: 16px;
+        border-radius: 999px;
+        border: 2px solid rgba(234, 231, 223, 0.78);
+        background: rgba(9, 9, 9, 0.72);
+        box-shadow:
+          0 10px 18px rgba(0, 0, 0, 0.55),
+          0 0 0 3px rgba(9, 9, 9, 0.35);
+        pointer-events: none;
+      }
+
+      .temp-range__indicator::before {
+        content: '';
+        position: absolute;
+        inset: 1px;
+        border-radius: 999px;
+        background: radial-gradient(
+          circle at 30% 30%,
+          rgba(255, 255, 255, 0.22),
+          rgba(255, 255, 255, 0) 62%
+        );
+      }
+
+      .temp-range__indicator::after {
+        content: '';
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 5px;
+        height: 5px;
+        border-radius: 999px;
+        background: var(--accent);
+        opacity: 0.95;
+      }
+
       .status-block {
         display: none;
         margin: 0 6px;
@@ -687,7 +822,7 @@
         border: 1px solid rgba(255, 255, 255, 0.08);
         background: rgba(18, 18, 18, 0.26);
         padding: 20px 18px;
-        min-height: 260px;
+        min-height: min-content;
         position: relative;
         overflow: hidden;
       }
@@ -936,9 +1071,9 @@
                 />
               </svg>
               <div>
-                <div class="temp">4.8°C</div>
+                <div class="temp">89°F</div>
                 <div class="desc">Breezy and foggy for the hour</div>
-                <div class="meta">Humidity: 47%</div>
+                <div class="meta">Humidity: 97%</div>
               </div>
             </div>
 
@@ -952,7 +1087,14 @@
                 </svg>
                 <div class="label">Lighting</div>
               </a>
-              <a class="qa" href="#top" aria-label="Climate (prototype)">
+              <button
+                class="qa"
+                type="button"
+                id="climate-toggle"
+                aria-label="Climate"
+                aria-controls="climate-panel"
+                aria-expanded="true"
+              >
                 <svg viewBox="0 0 24 24" aria-hidden="true">
                   <path
                     fill="currentColor"
@@ -960,7 +1102,7 @@
                   />
                 </svg>
                 <div class="label">Climate</div>
-              </a>
+              </button>
               <button
                 class="qa"
                 type="button"
@@ -1014,7 +1156,7 @@
                 id="agenda-toggle"
                 aria-label="Agenda"
                 aria-controls="agenda"
-                aria-expanded="true"
+                aria-expanded="false"
               >
                 <svg viewBox="0 0 24 24" aria-hidden="true">
                   <path
@@ -1026,7 +1168,7 @@
               </button>
             </div>
 
-            <div class="agenda" id="agenda" aria-label="Agenda">
+            <div class="agenda is-hidden" id="agenda" aria-label="Agenda">
               <div class="item">
                 <div class="name">Weekend In</div>
                 <div class="time">Until 7:00 PM</div>
@@ -1063,7 +1205,7 @@
                         d="M12 3c5 0 9 4 9 9s-4 9-9 9-9-4-9-9 4-9 9-9zm-1 5v8l7-4-7-4z"
                       />
                     </svg>
-                    Media
+                    Spotify
                   </span>
                 </div>
               </div>
@@ -1095,6 +1237,26 @@
                   </div>
                 </div>
                 <div class="scrub" aria-hidden="true"><span></span></div>
+              </div>
+            </section>
+
+            <section id="climate-panel" class="tile climate-panel" aria-label="Climate controls">
+              <div class="thermostat" aria-label="Thermostat">
+                <div class="thermostat__temp">71°F</div>
+                <div class="thermostat__meta">
+                  <div><strong>Humidity</strong>: 47%</div>
+                  <div><strong>Mode</strong>: Cool</div>
+                </div>
+              </div>
+
+              <div class="temp-range" aria-label="Home temperature range">
+                <div class="temp-range__row">
+                  <span>68°F</span>
+                  <span>78°F</span>
+                </div>
+                <div class="temp-range__bar" aria-hidden="true">
+                  <span class="temp-range__indicator" title="Setpoint: 71°F"></span>
+                </div>
               </div>
             </section>
 
@@ -1172,20 +1334,27 @@
 
                   <!-- Device/person pin marker (outer color = currentColor) -->
                   <symbol id="devicePin" viewBox="0 0 64 64">
+                    <defs>
+                      <clipPath id="devicePersonClip">
+                        <circle cx="32" cy="24" r="15.8" />
+                      </clipPath>
+                    </defs>
                     <path
                       d="M32 3C20.4 3 11 12.4 11 24c0 15.7 17.5 32.7 20.1 35.2.5.5 1.2.8 1.9.8s1.4-.3 1.9-.8C35.5 56.7 53 39.7 53 24 53 12.4 43.6 3 32 3z"
                       fill="currentColor"
                     />
                     <circle cx="32" cy="24" r="16" fill="var(--text-primary)" fill-opacity="0.96" />
-                    <circle cx="32" cy="21" r="6.2" fill="var(--panel-bg)" fill-opacity="0.72" />
-                    <path
-                      d="M20.5 40.5c2.9-6.4 9-9.8 11.5-9.8s8.6 3.4 11.5 9.8"
-                      fill="none"
-                      stroke="var(--panel-bg)"
-                      stroke-opacity="0.72"
-                      stroke-width="7.2"
-                      stroke-linecap="round"
-                    />
+                    <g clip-path="url(#devicePersonClip)">
+                      <circle cx="32" cy="21" r="6.2" fill="var(--panel-bg)" fill-opacity="0.72" />
+                      <path
+                        d="M20.5 40.5c2.9-6.4 9-9.8 11.5-9.8s8.6 3.4 11.5 9.8"
+                        fill="none"
+                        stroke="var(--panel-bg)"
+                        stroke-opacity="0.72"
+                        stroke-width="7.2"
+                        stroke-linecap="round"
+                      />
+                    </g>
                     <circle
                       cx="32"
                       cy="24"
@@ -2274,75 +2443,105 @@
           return { x, y, z };
         }
 
-        function enableMediaToggle() {
-          const toggleButton = document.getElementById('media-toggle');
-          const win = document.getElementById('media-window');
-
+        function getVisibleSidebarPanel() {
           const agendaEl = document.getElementById('agenda');
+          const mediaEl = document.getElementById('media-window');
+          const climateEl = document.getElementById('climate-panel');
+
+          if (mediaEl instanceof HTMLElement && !mediaEl.classList.contains('is-hidden')) {
+            return 'media';
+          }
+
+          if (climateEl instanceof HTMLElement && !climateEl.classList.contains('is-hidden')) {
+            return 'climate';
+          }
+
+          if (agendaEl instanceof HTMLElement && !agendaEl.classList.contains('is-hidden')) {
+            return 'agenda';
+          }
+
+          return null;
+        }
+
+        function setSidebarPanel(panel) {
+          const agendaEl = document.getElementById('agenda');
+          const mediaEl = document.getElementById('media-window');
+          const climateEl = document.getElementById('climate-panel');
+
           const agendaToggle = document.getElementById('agenda-toggle');
+          const mediaToggle = document.getElementById('media-toggle');
+          const climateToggle = document.getElementById('climate-toggle');
 
           if (
-            !(toggleButton instanceof HTMLButtonElement) ||
-            !(win instanceof HTMLElement) ||
-            !(agendaEl instanceof HTMLElement)
+            !(agendaEl instanceof HTMLElement) ||
+            !(mediaEl instanceof HTMLElement) ||
+            !(climateEl instanceof HTMLElement)
           ) {
             return;
           }
 
-          const isHidden = () => win.classList.contains('is-hidden');
-          const syncAria = () =>
-            toggleButton.setAttribute('aria-expanded', isHidden() ? 'false' : 'true');
+          const showAgenda = panel === 'agenda';
+          const showMedia = panel === 'media';
+          const showClimate = panel === 'climate';
 
-          syncAria();
+          agendaEl.classList.toggle('is-hidden', !showAgenda);
+          mediaEl.classList.toggle('is-hidden', !showMedia);
+          climateEl.classList.toggle('is-hidden', !showClimate);
+
+          if (agendaToggle instanceof HTMLButtonElement) {
+            agendaToggle.setAttribute('aria-expanded', showAgenda ? 'true' : 'false');
+          }
+          if (mediaToggle instanceof HTMLButtonElement) {
+            mediaToggle.setAttribute('aria-expanded', showMedia ? 'true' : 'false');
+          }
+          if (climateToggle instanceof HTMLButtonElement) {
+            climateToggle.setAttribute('aria-expanded', showClimate ? 'true' : 'false');
+          }
+        }
+
+        function enableMediaToggle() {
+          const toggleButton = document.getElementById('media-toggle');
+          if (!(toggleButton instanceof HTMLButtonElement)) {
+            return;
+          }
 
           toggleButton.addEventListener('click', () => {
-            const showMedia = isHidden();
-            win.classList.toggle('is-hidden', !showMedia);
-            agendaEl.classList.toggle('is-hidden', showMedia);
+            const visible = getVisibleSidebarPanel();
+            setSidebarPanel(visible === 'media' ? 'agenda' : 'media');
+          });
+        }
 
-            if (agendaToggle instanceof HTMLButtonElement) {
-              agendaToggle.setAttribute('aria-expanded', showMedia ? 'false' : 'true');
-            }
-            syncAria();
+        function enableClimateToggle() {
+          const toggleButton = document.getElementById('climate-toggle');
+          if (!(toggleButton instanceof HTMLButtonElement)) {
+            return;
+          }
+
+          toggleButton.addEventListener('click', () => {
+            const visible = getVisibleSidebarPanel();
+            setSidebarPanel(visible === 'climate' ? 'agenda' : 'climate');
           });
         }
 
         function enableAgendaToggle() {
           const toggleButton = document.getElementById('agenda-toggle');
-          const agendaEl = document.getElementById('agenda');
-
-          const mediaToggle = document.getElementById('media-toggle');
-          const mediaEl = document.getElementById('media-window');
-
-          if (
-            !(toggleButton instanceof HTMLButtonElement) ||
-            !(agendaEl instanceof HTMLElement) ||
-            !(mediaEl instanceof HTMLElement)
-          ) {
+          if (!(toggleButton instanceof HTMLButtonElement)) {
             return;
           }
 
-          const isVisible = () => !agendaEl.classList.contains('is-hidden');
-          const syncAria = () =>
-            toggleButton.setAttribute('aria-expanded', isVisible() ? 'true' : 'false');
-
-          syncAria();
-
           toggleButton.addEventListener('click', () => {
-            agendaEl.classList.toggle('is-hidden');
-            if (isVisible()) {
-              mediaEl.classList.add('is-hidden');
-              if (mediaToggle instanceof HTMLButtonElement) {
-                mediaToggle.setAttribute('aria-expanded', 'false');
-              }
-            }
-            syncAria();
+            const visible = getVisibleSidebarPanel();
+            setSidebarPanel(visible === 'agenda' ? null : 'agenda');
           });
         }
 
         (async function init() {
           enableMediaToggle();
+          enableClimateToggle();
           enableAgendaToggle();
+
+          const initialPanel = getVisibleSidebarPanel();
+          setSidebarPanel(initialPanel || 'climate');
           const statusEl = document.getElementById('floorplan-status');
           const emptyEl = document.getElementById('floorplan-empty');
           const emptyMessageEl = document.getElementById('floorplan-empty-message');
