--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hass-dash</title>
+    <meta name="theme-color" content="#090909" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <title>Home Assistant Dashboard</title>
     <link href="/style.css" rel="stylesheet" />
   </head>
   <body>
