feat: enhance UI and performance auditing
- Added styles for boot splash screen in style.css to improve user experience during loading.
- Updated service worker registration in registerServiceWorker.ts to prevent flaky behavior during Lighthouse CI audits.
- Introduced .lighthouserc.cjs configuration for Lighthouse CI to ensure consistent performance metrics and reporting.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link href="/style.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div id="boot-splash" role="status" aria-live="polite">Loading dashboard…</div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
