--- a/index.html
+++ b/index.html
@@ -8,10 +8,56 @@
     <meta name="theme-color" content="#090909" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <title>Home Assistant Dashboard</title>
-    <link href="/style.css" rel="stylesheet" />
+    <style>
+      html,
+      body,
+      #root {
+        height: 100%;
+      }
+
+      body {
+        margin: 0;
+        font-family:
+          ui-sans-serif,
+          system-ui,
+          -apple-system,
+          Segoe UI,
+          Roboto,
+          Helvetica,
+          Arial,
+          'Apple Color Emoji',
+          'Segoe UI Emoji';
+        color: #b9b6af;
+        background:
+          radial-gradient(1000px 520px at 50% 0%, rgba(255, 182, 92, 0.22), transparent 62%),
+          radial-gradient(900px 520px at 12% 12%, rgba(255, 201, 125, 0.1), transparent 58%),
+          radial-gradient(900px 520px at 86% 18%, rgba(255, 182, 92, 0.08), transparent 60%),
+          linear-gradient(135deg, #1a1713 0%, #0e0d0b 50%, #090909 100%);
+      }
+
+      #root {
+        position: relative;
+      }
+
+      #boot-splash {
+        position: absolute;
+        inset: 0;
+        display: grid;
+        place-items: center;
+        padding: 24px;
+        font-size: 14px;
+        letter-spacing: 0.2px;
+      }
+    </style>
+
+    <link rel="preload" href="/style.css" as="style" />
+    <link href="/style.css" rel="stylesheet" media="print" onload="this.media = 'all'" />
+    <noscript><link href="/style.css" rel="stylesheet" /></noscript>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div id="boot-splash" role="status" aria-live="polite">Loading dashboard…</div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
